<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewmodel"
            type="com.gotz.presentation.view.onboarding.OnboardingViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/Gray_050">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_bar"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@color/white"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent">

            <ImageView
                android:id="@+id/btn_back"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:background="@drawable/ic_arrow_left"
                android:layout_marginStart="16dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_info_kr"
                style="@style/Text16Bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@id/btn_back"
                android:layout_marginStart="7dp"/>

            <TextView
                android:id="@+id/tv_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save_kr"
                android:textStyle="bold"
                android:textSize="14dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:background="@color/white"
            app:layout_constraintTop_toBottomOf="@id/cl_bar">

            <TextView
                android:id="@+id/tv_nickname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="닉네임"
                style="@style/Text16Regular"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <com.gotz.base.custom.CustomEditText
                android:id="@+id/et_nickname"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="24dp"
                app:layout_constraintTop_toBottomOf="@id/tv_nickname"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:background="@color/white"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@id/cl_1">

            <TextView
                android:id="@+id/tv_age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/age_kr"
                style="@style/Text16Regular"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <Spinner
                android:id="@+id/spn_age"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="12dp"
                android:layout_centerHorizontal="true"
                android:autofillHints="@string/age_select_kr"
                android:dropDownWidth="match_parent"
                android:overlapAnchor="false"
                android:background="@drawable/shape_rect_f5f5f5_stroke"
                app:layout_constraintTop_toBottomOf="@id/tv_age"/>

            <TextView
                android:id="@+id/tv_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/gender_kr"
                style="@style/Text16Regular"
                app:layout_constraintTop_toBottomOf="@id/spn_age"
                app:layout_constraintStart_toStartOf="parent"/>

            <com.gotz.base.custom.CheckLayout
                android:id="@+id/checkLayout_1"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="24dp"
                app:layout_constraintTop_toBottomOf="@id/tv_gender"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/checkLayout_2"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <com.gotz.base.custom.CheckLayout
                android:id="@+id/checkLayout_2"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintTop_toBottomOf="@id/tv_gender"
                app:layout_constraintEnd_toStartOf="@id/checkLayout_3"
                app:layout_constraintStart_toEndOf="@id/checkLayout_1"/>

            <com.gotz.base.custom.CheckLayout
                android:id="@+id/checkLayout_3"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_marginTop="12dp"
                app:layout_constraintTop_toBottomOf="@id/tv_gender"
                app:layout_constraintStart_toEndOf="@id/checkLayout_2"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>