<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewmodel"
            type="com.gotz.presentation.view.onboarding.OnboardingViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_bar"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent">

            <ImageView
                android:id="@+id/btn_back"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:background="@drawable/ic_arrow_left"
                android:layout_marginStart="16dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            app:layout_constraintTop_toBottomOf="@id/cl_bar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <ImageView
                android:id="@+id/iv_contents"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="68dp"/>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_62_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.625"/>

            <TextView
                android:id="@+id/tv_contents"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/shape_rect_onboarding"
                android:gravity="center_vertical"
                android:padding="24dp"
                android:text="@string/on_boarding_terms_text"
                style="@style/Text16Regular"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="@id/guideline_62_5"
                app:layout_constraintTop_toTopOf="@id/iv_contents"
                app:layout_constraintBottom_toTopOf="@id/iv_contents"
                app:layout_constraintDimensionRatio="h, 1:0.44"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/ll_agree_all"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_marginTop="28dp"
                android:elevation="4dp"
                android:background="@drawable/shape_rect_purple_stroke"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_contents">

                <ImageView
                    android:id="@+id/iv_check"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_check_purple"
                    android:backgroundTint="@color/Gray_400"
                    android:layout_marginStart="20dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:layout_marginStart="8dp"
                    android:text="@string/agree_all_kr"
                    android:textSize="16dp"
                    android:textStyle="bold"
                    android:textColor="@color/Primary"
                    app:layout_constraintStart_toEndOf="@id/iv_check"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_privacy"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_marginTop="24dp"
                app:layout_constraintStart_toStartOf="@id/ll_agree_all"
                app:layout_constraintTop_toBottomOf="@id/ll_agree_all">

                <ImageView
                    android:id="@+id/iv_privacy_check"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:background="@drawable/ic_check_purple"
                    android:backgroundTint="@color/Gray_400"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <TextView
                    android:id="@+id/tv_privacy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/on_boarding_privacy_title"
                    android:layout_marginStart="12dp"
                    app:layout_constraintStart_toEndOf="@id/iv_privacy_check"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <TextView
                    android:id="@+id/tv_privacy_more"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/more_kr"
                    style="@style/Text12Bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_terms"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                app:layout_constraintStart_toStartOf="@id/ll_agree_all"
                app:layout_constraintTop_toBottomOf="@id/cl_privacy">

                <ImageView
                    android:id="@+id/iv_terms_check"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:background="@drawable/ic_check_purple"
                    android:backgroundTint="@color/Gray_400"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <TextView
                    android:id="@+id/tv_terms"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/on_boarding_terms_title"
                    android:layout_marginStart="12dp"
                    app:layout_constraintStart_toEndOf="@id/iv_terms_check"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <TextView
                    android:id="@+id/tv_terms_more"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/more_kr"
                    style="@style/Text12Bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <Button
                android:id="@+id/btn_next"
                android:text="@string/next_kr"
                android:onClick="@{() -> viewmodel.btnClick()}"
                android:enabled="false"
                style="@style/OutlinedButtonStyle"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:backgroundTint="@null"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>