<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_my"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent">

            <TextView
                android:id="@+id/textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/My_Page"
                android:textSize="24dp"
                android:textStyle="bold"
                android:textColor="@color/Gray_900"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="My Page" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/cl_my"
            app:layout_constraintBottom_toBottomOf="parent">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:paddingBottom="40dp"
                app:layout_constraintTop_toBottomOf="@id/cl_my"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <ImageView
                    android:id="@+id/iv_my_profile"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:src="@drawable/img_my_banner"
                    android:layout_marginTop="84dp"
                    app:layout_constraintDimensionRatio="h, 3:1"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>


                <TextView
                    android:id="@+id/tv_my_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/Gray_900"
                    android:lineHeight="28dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="100dp"
                    style="@style/Text24Bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="김갓찌"/>

                <ImageView
                    android:id="@+id/iv_my_set_profile"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_arrow_right"
                    android:layout_marginStart="11dp"
                    app:layout_constraintStart_toEndOf="@id/tv_my_name"
                    app:layout_constraintTop_toTopOf="@id/tv_my_name"
                    app:layout_constraintBottom_toBottomOf="@id/tv_my_name"/>

                <TextView
                    android:id="@+id/tv_my_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16dp"
                    android:layout_marginTop="8dp"
                    android:visibility="gone"
                    app:layout_constraintStart_toStartOf="@id/tv_my_name"
                    app:layout_constraintTop_toBottomOf="@id/tv_my_name"
                    tools:text="gottz_zz@naver.com"/>

                <ImageView
                    android:id="@+id/iv_my_icon"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_marginTop="280dp"
                    android:src="@drawable/img_calendar_no_schedule"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <TextView
                    android:id="@+id/tv_schedule_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/empty_schedule_title"
                    android:gravity="center"
                    android:layout_marginTop="15dp"
                    style="@style/Text14Regular"
                    app:layout_constraintTop_toBottomOf="@id/iv_my_icon"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

                <TextView
                    android:id="@+id/tv_schedule_move"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/Primary"
                    android:text="@string/empty_schedule_add"
                    style="@style/Text14Bold"
                    app:layout_constraintTop_toBottomOf="@id/tv_schedule_count"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

                <TextView
                    android:id="@+id/tv_terms"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_marginTop="100dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:gravity="center_vertical"
                    android:text="@string/terms_of_service_kr"
                    style="@style/Text14Regular"
                    app:layout_constraintTop_toBottomOf="@id/tv_schedule_move"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:background="@color/Gray_200"
                    app:layout_constraintTop_toBottomOf="@id/tv_terms"/>

                <TextView
                    android:id="@+id/tv_privacy"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:gravity="center_vertical"
                    android:text="@string/privacy_policy_kr"
                    style="@style/Text14Regular"
                    app:layout_constraintTop_toBottomOf="@id/tv_terms"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:background="@color/Gray_200"
                    app:layout_constraintTop_toBottomOf="@id/tv_privacy"/>

                <TextView
                    android:id="@+id/tv_version"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:gravity="center_vertical"
                    android:text=""
                    style="@style/Text14Regular"
                    app:layout_constraintTop_toBottomOf="@id/tv_privacy"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:background="@color/Gray_200"
                    app:layout_constraintTop_toBottomOf="@id/tv_version"/>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cl_gotz_banner"
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
                    android:background="@drawable/shape_rect_purple"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    app:layout_constraintTop_toBottomOf="@id/tv_version">

                    <ImageView
                        android:id="@+id/iv_logo_white"
                        android:layout_width="70dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/ic_logo_white"
                        app:layout_constraintHorizontal_chainStyle="packed"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/tv_logo_white"/>

                    <TextView
                        android:id="@+id/tv_logo_white"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/want_to_know_kr"
                        android:textColor="@color/white"
                        android:layout_marginStart="5dp"
                        style="@style/Text14Regular"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@id/iv_logo_white"
                        app:layout_constraintEnd_toEndOf="parent"/>
                </androidx.constraintlayout.widget.ConstraintLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>